--- a/templates/datahub-deployment-existing-vpc.yaml
+++ b/templates/datahub-deployment-existing-vpc.yaml
@@ -50,7 +50,6 @@ Metadata:
             - CreateEKS
             - ProvisionInstanceType
             - EksMgmtIamRoleArn
-            #- EksExternalUser
             - KubernetesVersion
         - Label:
             default: EKS Node Group Configuration
@@ -414,7 +413,7 @@ Parameters:
       Description: DataHub Domain Name
       Type: String
     KotsDomainName:
-      Default: "kotsadm.a.b.c"
+      Default: "kotsadm.e.f.g"
       Description: Kots Admin Domain Name
       Type: String
     KotsAdmNLBScheme:
