--- a/templates/nested/admin.yaml
+++ b/templates/nested/admin.yaml
@@ -429,6 +429,7 @@ Resources:
                     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
                     service.beta.kubernetes.io/aws-load-balancer-scheme: "${KotsAdmNLBScheme}"
                     service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "${KotsElbCertArn}"
+                    service.beta.kubernetes.io/aws-load-balancer-subnets: ${PrivateSubnet1ID},${PrivateSubnet2ID},${PrivateSubnet3ID}
                     service.beta.kubernetes.io/aws-load-balancer-type: external
                   labels:
                     kots.io/kotsadm: "true"
@@ -480,7 +481,7 @@ Resources:
                       value: "${ElbInboundCIDRs}"
                     subnet_ids:
                       repeatableItem: service_port
-                      value: "${PrivateSubnet1ID},${PrivateSubnet2ID},${PrivateSubnet3ID}"
+                      value: ${PrivateSubnet1ID},${PrivateSubnet2ID},${PrivateSubnet3ID}
                     load_balancer_name:
                       repeatableItem: service_port
                       value: "${EKSClusterName}-datahub"
