20211110, userarn, cleanup stack

--- a/templates/nested/eks-prerequsite.yaml
+++ b/templates/nested/eks-prerequsite.yaml
@@ -11,6 +11,7 @@ Metadata:
             - Environment
             - VPCID
             - ProvisionSecurityGroup
+            - EksCidrIp
 
       ParameterLabels:
         TemplateBucketName:
@@ -21,6 +22,8 @@ Metadata:
           default: The ID of the VPC to deploy the EKS Cluster into
         ProvisionSecurityGroup:
           default: The Security Group of Provision Host
+        EksCidrIp:
+          default: Cidr to access EKS
 
 Parameters:
     TemplateBucketName:
@@ -38,6 +41,9 @@ Parameters:
     ProvisionSecurityGroup:
       Description: "ID for the VPC, This will be used to get the provision security group"
       Type: "AWS::EC2::SecurityGroup::Id"
+    EksCidrIp:
+      Description: "Cidr to access EKS"
+      Type: "String"
 
 Resources:
   EKSServiceRole:
@@ -92,6 +98,16 @@ Resources:
       Description: Allow provision to communicate with the cluster API Server
       GroupId: !Ref ControlPanelSecurityGroup
       SourceSecurityGroupId: !Ref ProvisionSecurityGroup
+      IpProtocol: tcp
+      ToPort: 443
+      FromPort: 443
+
+  ClusterControlPanelSecurityGroupIngress03:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      Description: Allow other subnets to communicate with the cluster API Server
+      GroupId: !Ref ControlPanelSecurityGroup
+      CidrIp: !Ref EksCidrIp
       IpProtocol: tcp
       ToPort: 443
       FromPort: 443
