--- a/templates/datahub-deployment-existing-vpc.yaml
+++ b/templates/datahub-deployment-existing-vpc.yaml
@@ -528,7 +528,7 @@ Resources:
 
     EC2LogGroup:
       Type: AWS::Logs::LogGroup
-      DeletionPolicy: Retain
+      #DeletionPolicy: Retain
       Properties: 
         LogGroupName: !Sub "/${Environment}/${AWS::StackName}/ProvisionHost"
 
