--- a/templates/nested/eks-cluster.yaml
+++ b/templates/nested/eks-cluster.yaml
@@ -285,6 +285,7 @@ Resources:
                   - elasticloadbalancing:DescribeTags
                   - elasticloadbalancing:DeleteLoadBalancers
                   - elasticloadbalancing:DeleteLoadBalancer
+                  - elasticloadbalancing:DescribeTargetGroups
                   - sts:*
                   - ec2:DescribeTags 
                   - ec2:RevokeSecurityGroupIngress
@@ -292,6 +293,7 @@ Resources:
                   - ec2:DeleteSecurityGroups
                   - ec2:DeleteSecurityGroup
                   - ec2:RevokeSecurityGroupIngress
+                  - ec2:AuthorizeSecurityGroupIngress
                   - autoscaling:DeleteLaunchConfiguration
                   - autoscaling:DescribeAutoScalingGroups
                   - autoscaling:DescribeScalingActivities
