--- a/templates/datahub-deployment-existing-vpc-3-subnets.yaml
+++ b/templates/datahub-deployment-existing-vpc-3-subnets.yaml
@@ -691,6 +691,7 @@ Resources:
           Environment: !Ref Environment
           ProvisionSecurityGroup: !Ref ProvisionSecurityGroup
           EksCidrIp: !Ref EksCidrIp
+          EksClusterName: !Sub "${AWS::StackName}"
 
     EKSClusterStack:
       Condition: isCreateEKS
